Wrapped up some styling and fixed bug with editing tasks

--- a/src/components/app/Table/CatagorySelect/CatagorySelect.module.scss
+++ b/src/components/app/Table/CatagorySelect/CatagorySelect.module.scss
@@ -6,6 +6,8 @@
 
   width: 100%;
 
+  margin-bottom: 15px;
+
   .dropdown {
     width: 100%;
   }
